# rust-app-baremetal-arm

./: Cargo.toml  Dockerfile  Makefile  README.md  build.sh  link.ld
.cargo/: config
docker/qemu/: Dockerfile  run.sh
docker/toolchain/: build.sh
src/: main.rs  start.S
